Add support for regex in targets

--- a/test/expected/barRegex.html
+++ b/test/expected/barRegex.html
@@ -43,15 +43,17 @@
 
 
 
-  <link rel="stylesheet" href="double-quoted-literal-target.css">
-
-
-
-  <link rel="stylesheet" href="double-quoted-literal-target_or_foo.css">
 
 
 
 
+  <link rel="stylesheet" href="not_double-quoted-literal-target.css">
 
 
+
+  <link rel="stylesheet" href="not_double-quoted-literal-target_and_not_foo.css">
+
+
+
+  <link rel="stylesheet" href="regex_foo_or_bar.css">
 
