--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -82,3 +82,7 @@
 <!--(if target !("double-quoted-literal-target" || foo))><!-->
   <link rel="stylesheet" href="not_double-quoted-literal-target_and_not_foo.css">
 <!--<!(endif)-->
+
+<!--(if target '/.*(?:foo|bar).*/')><!-->
+  <link rel="stylesheet" href="regex_foo_or_bar.css">
+<!--<!(endif)-->
